manifests/vault.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: secrets.opendesk.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: vault-svc
                port:
                  number: 8200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - secrets.opendesk.apps.digilab.network
      secretName: vault-tls
---
apiVersion: v1
kind: Service
metadata:
  name: vault-svc
spec:
  ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: vault-api
    - name: http-internal
      port: 8201
      protocol: TCP
      targetPort: http-internal
  selector:
    app: vault
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  labels:
    app: vault
spec:
  serviceName: vault
  updateStrategy:
    type: OnDelete
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 100
        fsGroup: 1000
      containers:
        - name: vault
          image: hashicorp/vault:1.18.2
          ports:
            - containerPort: 8200
              name: vault-api
            - containerPort: 8201
              name: http-internal
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
              ephemeral-storage: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          args:
            - server
          volumeMounts:
            - name: config
              mountPath: /vault/config
            - name: data
              mountPath: /vault/data
      volumes:
        - name: config
          configMap:
            name: vault-config
        - name: data
          emptyDir: {}
      resources:
        limits:
          ephemeral-storage: "2Gi"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: managed
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
